# Bronchial-Segmentation

./: BronchialSegmentation.cxx  BronchialSegmentation.h  CMakeLists.txt  Tests.cxx  ThresholdFilter.cxx
debug/: CMakeCache.txt  Makefile  cmake_install.cmake
